Добавляет стили позиционирования

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,8 @@
 <body class="page">
 <!--Шапка сайта-->
 <header>
-    <nav class="nav">
+    <div class="container main-nav">
+    <nav class="main-nav">
         <a class="logo-link" href="./index.html">Web<span class="logo-studio">Studio</span></a>
 
         <ul class="list site-nav">
@@ -28,7 +29,7 @@
         <li class="list"><a href="mailto:info@devstudio.com" class="link mail">info@devstudio.com</a></li>
         <li class="list"><a href="tel:+380961111111" class="link tel">+38 096 111 11 11</a></li>
     </ul>
-
+ </div> 
 </header>
 
 <main>
