--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
 </head>
 <body class="page">
     <!--Шапка сайта-->
-    <header>
-    <nav class="nav">
+    <header class="section" >
+        <div class="container main-nav">
+    <nav class="main-nav">
         <a class="logo-link" href="./index.html">Web<span class="logo-studio">Studio</span></a>
 
         <ul class="list site-nav">
-            <li class="list"><a href="#" class ="link current">Студия</a></li>
-            <li class="list"><a href="./portfolio.html" class="link">Портфолио</a></li>
-            <li class="list"><a href="#" class="link">Контакты</a></li>
+            <li class="list-item"><a href="#" class ="link current">Студия</a></li>
+            <li class="list-item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+            <li class="list-item"><a href="#" class="link">Контакты</a></li>
         </ul>
     </nav>
 
@@ -28,7 +29,7 @@
             <li class="list"><a href="mailto:info@devstudio.com" class="link mail">info@devstudio.com</a></li>
             <li class="list"><a href="tel:+380961111111" class="link tel">+38 096 111 11 11</a></li>
         </ul>
-        
+        </div>
     </header>
 
 
