Добавляет стили позиционирования

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                          <h3 class="title-card">Николай Тарасов</h3>
                          <p class="subtitle">Marketing</p>
                     </li>
-                    <li class="list ">
+                    <li class="list team-item">
                         <img src="./images/img7.jpg" alt="фото Михаила Ермакова" width="270" height="260"/>
                         <h3 class="title-card">Михаил Ермаков</h3>
                         <p class="subtitle">UI Designer</p>
