Добавляет стили позиционирования

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
     </main>
 
     <!--Футер-->
-    <footer class="footer">
-        <div class="">
+    <footer class="section footer">
+        <div class="container">
             <a class="footer-logo" href= "./index.html">Web<span class="logo-studio">Studio</span></a>
              <address class="contacts">
             <ul class="contacts">
