Добавляет стили позиционирования

--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
     </main>
 
     <!--Футер-->
-    <footer class="section footer">
+    <footer class="footer section">
         <div class="container">
             <a class="footer-logo" href= "./index.html">Web<span class="logo-studio">Studio</span></a>
-             <address class="contacts">
+             <address class="address">
             <ul class="contacts">
-                <li class="list"><span class="contact-letter">г. Киев, пр-т Леси Украинки, 2</span></li>
-                <li class="list"><a href="#" class="link-mail">info@example.com</a></li>
-                <li class="list"><a href="#" class="link-tel">+38 099 111 11 11</a></li>    
+                <li class="list-address"><span class="contact-letter">г. Киев, пр-т Леси Украинки, 2</span></li>
+                <li class="list-address"><a href="#" class="link-mail">info@example.com</a></li>
+                <li class="list-address"><a href="#" class="link-tel">+38 099 111 11 11</a></li>    
             </ul>
         </address>
        </div>
