--- a/portfolio.html
+++ b/portfolio.html
@@ -34,8 +34,8 @@
 
 <main>
     <!--Портфолио работ-->
-    <section class="section portfolio-section">
-        <div class="container filters-container">
+    <section class="section">
+        <div class="container">
         <h1 class="hidden-title">Портфолио работ</h1>
             <ul class="buttons">
                 <li class="list-button"><button type="button" class="filter-button">Все</button></li>
